--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "express": "4.17.1",
     "nodemon": "2.0.19",
-    "socket.io": "2.2.0"
+    "socket.io": "2.2.0",
+    "socket.io-client": "2.2.0"
   },
   "scripts": {
     "start": "nodemon server.js",
