--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "express": "4.17.1",
     "nodemon": "2.0.19",
+    "shortid": "^2.2.16",
     "socket.io": "2.2.0",
     "socket.io-client": "2.2.0"
   },
